<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hid"
            android:id="@+id/etaid"
            android:textAlignment="center"
            android:textSize="20sp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hnombre"
            android:textAlignment="center"
            android:id="@+id/etanombre"
            android:textSize="20sp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hcantidad"
            android:textAlignment="center"
            android:id="@+id/etacantidad"
            android:textSize="20sp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hprecio"
            android:textAlignment="center"
            android:id="@+id/etaprecio"
            android:textSize="20sp"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btagregar"
        android:text="@string/bagregar"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/tvagregar"
        android:textSize="20sp"
        android:textColor="@color/black"/>

</LinearLayout>