<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/paraeliminar"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hid"
            android:textAlignment="center"
            android:id="@+id/eteid"
            android:textSize="20sp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hnombre"
            android:textAlignment="center"
            android:id="@+id/etenombre"
            android:textSize="20sp"
            android:inputType="text"/>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/bteliminar"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/beliminar"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:id="@+id/tveliminar"/>
</LinearLayout>